service_django_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    env: dev
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      name: django-app-pod
      labels:
        env: dev
        app: django
    spec:
      containers:
        - name: django-app
          image: anneg8/django_app:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: media-volume
              mountPath: /media
      volumes:
        - name: media-volume
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  labels:
    env: dev
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
